# anomity

./: README.md  docker-compose.yml  init.sql  justfile
.github/: dependabot.yml
api/: .gitignore  Cargo.toml  justfile
api/.sqlx/: query-09c4f07cad9bc4ea66f3cf8d82b5ae5245909535fb101e4b94d9afb64119fb07.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-29a9963fa024857d1e75570d147855736f74aa2b4a4d0ed267ecba019af46126.json  query-3aa6e21baf8a19efeac7f097d84d1dbeeb299f36b784d8174d7a9643ff9c2d91.json  query-4ca7e6fba81cfb57a782c858cfd3de0c077bb76c4df35415ec8b14daa7d0d80b.json  query-5f0a05fa36e57cca8eebafe843f8c60bdf547d66f71bb58838c15aaa7a87dd4b.json  query-6eef45b0d5c972dfad703484188a19e83b23e6efb7e644c67f31567917fa1efa.json  query-7b045607bb951a7687c8d1145f149581b9faba84bf133683d2651e94ab2ce672.json  query-863aba88804575206f49c0b66d4cb049aaa545482838edec3d5a9038d78e0ce4.json  query-aa2382a104517d65de818f47a94ef21e4eaaf5216747bfa8de2bd521a23505db.json  query-b6793b6777aa3270c3b0dd92e9d88c208eff0294588c1afbbcff0f4e72da698d.json  query-eaa640b57177bdcb03b52c77820f0a2035d28e8cbaa51d1b85b0c9029a99624c.json  query-f275df921cfe4fba49d5fbb91f3fa50b50a454d27cad5f144eefa001047f53c7.json
api/migrations/: 20230508222522_users.sql  20231226001631_messages_and_rooms.sql  20231226004749_add_user_field_on_room.sql
api/src/: db.rs  main.rs  tests.rs
api/src/api/: auth.rs  message.rs  mod.rs  rooms.rs  user.rs
api/src/models/: message.rs  mod.rs  room.rs  user.rs
api/src/routes/: message.rs  mod.rs  user.rs
api/test/: root.rs
backend/: Cargo.toml  justfile
backend/migrations/: 20230318101625_users.sql  20230318104619_messages.sql  20230508222522_users.sql  20230508222901_messages.sql
backend/src/: error.rs  main.rs
backend/src/api/: auth.rs
backend/src/routes/: message.rs  mod.rs  user.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.d.ts  error.html  hooks.server.ts
frontend/src/lib/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/reset-password/: +page.svelte
frontend/src/routes/signin/: +page.server.ts  +page.svelte
frontend/src/routes/signup/: +page.server.ts  +page.svelte
frontend/src/types/: user.ts
frontend/src/utils/: constants.ts
web/: package.json  pnpm-lock.yaml  svelte.config.js  uno.config.ts  vite.config.ts
web/src/: app.d.ts  hooks.server.ts
web/src/lib/: auth.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  RoomItem.svelte
web/src/routes/[roomId]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  Editor.svelte
web/src/routes/signin/: +page.server.ts  +page.svelte
web/src/routes/signup/: +page.server.ts  +page.svelte
web/src/types/: room.ts
web/src/utils/: constants.ts
