[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros", "headers", "ws"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "chrono","uuid", "json", "migrate"] }
time = "0.3.11"
anyhow = "1.0"
serde = "1.0.163"
uuid = { version = "1.3.3", features = ["serde"] }
serde_with = { version = "3.0.0", features = ["time_0_3"] }
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.40"
dotenvy = "0.15.7"
argon2 = "0.5.0"
rand = "0.8.5"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
async-session = "3.0.0"
tower-cookies = "0.9.0"
futures = "0.3.29"
axum-extra = { version = "0.9.0", features = ["typed-header"] }


[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
serde_json = "1.0.82"
