[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"]  }


time = "0.3.11"
anyhow = "1.0"
serde = "1.0.140"
uuid = { version = "1.1.2", features = ["serde"] }
serde_with = { version = "2.0.0", features = ["time_0_3"] }


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"